# PromptEvo

./: .env.example  .gitignore  README.md  api.py  config.py  get_deps.py  main.py  pyproject.toml  requirements.txt  run.py  start_server.bat
adapters/: base_adapter.py  langchain_adapter.py  ollama_adapter.py
agents/: adaptive_curiosity.py  adaptive_engine.py  analyst_decision.py  analyst_llm.py  domain_detector.py  dynamic_scenario_generator.py  hybrid_swarm.py  injector.py  probe_optimizer.py  profiler.py  red_debate_swarm.py  scenario_generator.py  static_goals.json
config/: agent_personas.yaml  amnesia_steering.yaml  infrastructure.yaml  tap_hyperparameters.yaml
core/: adaptive_fallback.py  audit_trail.py  behavioral_engine.py  behavioral_progression.py  behavioral_state.py  block_recovery.py  boundary_guard.py  context_window.py  contracts.py  cooperation_memory.py  escalation_router.py  fallback_pool.py  framing_guard.py  goal_aware_artifacts.py  goal_aware_probes.py  goal_catalog.py  goal_completion_guard.py  goal_fit.py  goal_intent_filter.py  goal_memory.py  goal_modes.py  goal_utils.py  graph.py  high_water_steering.py  hybrid_loader.py  lcm_layer.py  llm_resolver.py  loop_controller.py  message_contract.py  message_guard.py  near_miss_latch.py  objective_anchor.py  objective_intent.py  payload_contract.py  payload_guard.py  phase_controller.py  phase_manager.py  probe_filter.py  probe_generator.py  probe_history_guard.py  (+9 more)
dashboard/: README.md  __init__.py  agents_catalog.py  components.py  data_loader.py  env_config.py  memory_loader.py  requirements-dashboard.txt  runner.py  streamlit_app.py  (+2 more)
(+268 files in other folders)
