[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt_evo"
version = "2.0.0"
description = "Advanced AI Red/Blue Teaming Framework"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "faiss-cpu",
    "fastapi",
    "httpx",
    "langchain",
    "langchain-anthropic",
    "langchain-community",
    "langchain-core",
    "langchain-groq",
    "langchain-ollama",
    "langchain-openai",
    "langgraph",
    "numpy",
    "openai",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "redis",
    "rich",
    "starlette",
    "streamlit",
    "tenacity",
    "tiktoken",
    "uvicorn",
]

[project.optional-dependencies]
observability = ["python-json-logger"]
test = ["pytest"]

# scout/ is a legacy offline SEED pipeline.  Its `demo_test.py` is a CLI demo
# script (functions prefixed `test_` for readability) that pytest would
# otherwise collect and fail on missing fixtures.  Exclude it from test
# discovery to keep `pytest` green without touching the legacy utility.
[tool.pytest.ini_options]
norecursedirs = ["scout", ".venv", "build", "dist", "tmp"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
py-modules = ["api", "main", "dashboard", "config"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["adapters*", "agents*", "core*", "evaluators*", "infra*", "memory*", "remediation*", "reporting*", "strategy*", "utils*"]
exclude = ["tests*", "data*"]
